@@ -48,10 +48,12 @@ Collate:
     'CQI.cqpserver.R'
     'CQI.perl.R'
     'CQI.rcqp.R'
+    'Corpus_class.R'
     'Regions_class.R'
     'TermDocumentMatrix_methods.R'
     'TokenStream_class.R'
     'adjustEncoding_method.R'
+    'aggregate_method.R'
     'generics.R'
     'textstat_class.R'
     'bundle_class.R'
@@ -83,7 +85,6 @@ Collate:
     'count_method.R'
     'tempcorpus.R'
     'cpos_method.R'
-    'deflate_method.R'
     'hits_class.R'
     'dispersion_method.R'
     'dispersion_methods.R'
@@ -94,7 +95,6 @@ Collate:
     'freq_method.R'
     'frequencies_method.R'
     'getEncoding_method.R'
-    'getTermFrequencies_method.R'
     'getTerms_method.R'
     'getTokenStream_method.R'
     'highlight_method.R'
