@@ -5,9 +5,11 @@ export(CQI)
 export(CQI.cqpserver)
 export(CQI.perl)
 export(CQI.rcqp)
+export(Corpus)
 export(as.cqp)
 export(cooccurrences)
 export(flatten)
+export(getObjects)
 export(is.cqp)
 export(parseInfoFile)
 export(parseRegistry)
@@ -72,7 +74,6 @@ exportMethods(enrich)
 exportMethods(freq)
 exportMethods(frequencies)
 exportMethods(getEncoding)
-exportMethods(getTermFrequencies)
 exportMethods(getTerms)
 exportMethods(getTokenStream)
 exportMethods(head)
