@@ -2,11 +2,6 @@ library(shiny)
 library(polmineR)
 library(shinythemes)
 
-# partitionNames <- c(
-#   polmineR:::.getClassObjectsAvailable('.GlobalEnv', 'partition'),
-#   polmineR:::.getClassObjectsAvailable('.GlobalEnv', 'pressPartition'),
-#   polmineR:::.getClassObjectsAvailable('.GlobalEnv', 'plprPartition')
-# )
 shinyThemeToUse <- shinytheme("cerulean") # alternatives: flatly, cerulean
 
 shinyUI(
