@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/deflate_method.R, R/partition_method.R
+% Please edit documentation in R/aggregate_method.R, R/partition_method.R
 \docType{methods}
 \name{aggregate,partition-method}
 \alias{aggregate,partition-method}
